--- a/apache/starwars.conf
+++ b/apache/starwars.conf
@@ -1,9 +1,11 @@
 <VirtualHost *:80>
     ServerName starwars.brunosct.dedyn.io
 
+
     DocumentRoot /app/starwars
     <Directory /app/starwars>
         Require all granted
+        DirectoryIndex index.php index.html
     </Directory>
 
 </VirtualHost>
