--- a/apache/starwars.conf
+++ b/apache/starwars.conf
@@ -1,7 +1,10 @@
 <VirtualHost *:80>
     ServerName starwars.brunosct.dedyn.io
 
-
+    Alias darthsidious /app/palpatine
+    <Directory /app/palpatine>
+        Require all granted
+    </Directory>
     DocumentRoot /app/starwars
     <Directory /app/starwars>
         Require all granted
