--- a/apache/starwars.conf
+++ b/apache/starwars.conf
@@ -7,6 +7,7 @@
     </Directory>
     DocumentRoot /app/starwars
     <Directory /app/starwars>
+        Options Indexes
         Require all granted
         DirectoryIndex index.php index.html
     </Directory>
