--- a/apache/starwars.conf
+++ b/apache/starwars.conf
@@ -14,7 +14,7 @@
 
     <Directory /app/starwars/skywalker>
         Require all granted
-        <FilesMatch "\.php$">
+        <FilesMatch "\.(php|gif)$">
             Require all denied
         </FilesMatch>
     </Directory>
