--- a/apache/starwars.conf
+++ b/apache/starwars.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName starwars.brunosct.dedyn.io
+    ServerName starwars.a21miguelsb.dedyn.io
 
     Alias /darthsidious /app/palpatine
     <Directory /app/palpatine>
