--- a/apache/startrek.conf
+++ b/apache/startrek.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerName startrek.brunosct.dedyn.io
+    ServerName startrek.a21miguelsb.dedyn.io
 
     DocumentRoot /app/startrek
     <Directory /app/startrek>
